--- a/index.html
+++ b/index.html
@@ -14,19 +14,7 @@
 </p>
 <x3d width='800px' height='800px'>
 <scene>
-<inline url="#
-# Wavefront material file
-# Converted by Meshlab Group
-#
-
-newmtl material_0
-Ka 0.200000 0.200000 0.200000
-Kd 1.000000 1.000000 1.000000
-Ks 1.000000 1.000000 1.000000
-Tr 1.000000
-illum 2
-Ns 0.000000
-map_Kd Nefertiti_RD10_topologia_tex.png> </inline>
+<inline url="https://raw.githubusercontent.com/mcgonzalezfuent/Modelo-3D/main/index.html> </inline>
 </scene>
 </x3d>
 <p>
